ajuste definitivo de integrãção